--- a/index.html
+++ b/index.html
@@ -136,18 +136,18 @@
               <!-- First project -->
                     <div class="card">
                         <div class="box">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTH7qQuQ6BzR1XYt3rvo2LOSJS9-zP_BVzu3A&usqp=CAU" alt="">
-                            <div class="text">pluralsight.com</div>
-                            <p> You can visite this website for any trainnning or course of for individual of any organization. I tried to create only some basic feature of this website. </p>
-                            <p class="techStack">Tech Used: Html, CSS, JavaScript</p>
+                            <img src="https://m.media-amazon.com/images/I/71a3CV8AgnL._SX425_.jpg" alt="">
+                            <div class="text">Online Green Nursery</div>
+                            <p>This was a team project and we have implemted sign-up/login, authentication, and implemented several interfaces </p>
+                            <p class="techStack">Tech Used: Spring Boot, Hibernate, MySQL</p>
                             <div class="repo-links">
                                 <div class="repo-div">
                                     <!-- git repo link -->
-                                    <span>  <a href="https://github.com/SudhanshuRoy/skillful-bead-8466" target="_blank"> Git Repo </a></span>
+                                    <span>  <a href="https://github.com/Chetan8788/Online-Green-Nursery" target="_blank"> Git Repo </a></span>
                                 </div>
                                 <div class="demo-div">
                                     <!-- netlify link -->
-                                    <span> <a href="https://cerulean-chimera-be489c.netlify.app" target="_blank">  Live Site  </a></span>
+                                    <span> <a href="https://drive.google.com/file/d/18Kvlsbm-cWKO5NNVEWueYVOPghdMlaSo/view?usp=share_link" target="_blank">  video  </a></span>
                                     
                                 </div>
                             </div>
