profile pic modified

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="text-2">Sudhanshu Kumar</div>
                 <div class="text-3">Java Backend Developer
                      <span class="typing"></span></div>
-                <a target="_blank" href="https://drive.google.com/file/d/1zsRI56uWqrm_HInxlt2EWKC4QqKya42c/view?usp=share_link" download="">Resume</a>
+                <a target="_blank" href="https://drive.google.com/file/d/1zsRI56uWqrm_HInxlt2EWKC4QqKya42c/view?usp=share_link" download>Resume</a>
             </div>
         </div>
     </section>
@@ -55,7 +55,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/sudhanshu.png" alt="">
+                    <img src="images/sudhanshu.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">Sudhanshu Kumar <span class="typing-2"></span></div>
