modified menu botton

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/sudhanshu.jpg" alt="">
+                    <img src="images/sudhandhu.png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">Sudhanshu Kumar <span class="typing-2"></span></div>
