--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <!-- <li><a href="#services" class="menu-btn">Services</a></li> -->
+                <li><a href="#experience" class="menu-btn">Experience</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#project" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
@@ -65,7 +65,28 @@
             </div>
         </div>
     </section>
+    
+    <!-- Experience section start -->
+    <section id="experience">
+        <h2>Professional Experience</h2>
+        <div class="experience-item">
+            <img src="https://assets-global.website-files.com/6317934b72d1344ee25173ef/637d0565e3a110392fad7041_Salesken-logo_Full%20Color-p-500.png" alt="Company Logo">
+            <p><b>SDE Intern</b></p>
+            <p>03/2023-06/2023</p>
+            <p><b>Roles and Responsibilities</b></p>
+            <ul>
+                <li>Developed APIs and implemented business logic to support core functionality.</li>
+                <li>Optimized SQL queries for efficient data retrieval and manipulation.</li>
+                <li>Integrated APIs with the front-end to ensure seamless functionality and user experience.</li>
+                <li>Conducted thorough debugging of code to identify and resolve issues for enhanced performance.</li>
+                <li>Utilized technologies such as Spring Boot, Microservices, Servlets, JSP, jQuery, and AJAX.</li>
+                <li>Worked with tools like Eclipse, Git, and GitHub for version control and collaborative development.</li>
+            </ul>
+        </div>
+        <!-- Add more experience items as needed -->
+    </section>
 
+    <!-- Experience section end -->
   
         <section class="skills" id="skills">
             <div class="max-width">
@@ -323,7 +344,7 @@
 </body>
 </html>
 
-<script src="index.js"></script>
+<script src="script.js"></script>
 <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 <script>
   GitHubCalendar(".calendar", "SudhanshuRoy", { responsive: true });
